criei título e parágrafo

--- a/pageTest.html
+++ b/pageTest.html
@@ -8,7 +8,8 @@
 		<title>Tutorial de Git</title><!--título da pagina -->
 	</head>
 	<body>
-	
+		<h1>Título</h1>
+		<p>Estou treinando Git</p>
 	</body>
 
 
